--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <title>Customer Database</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.js">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <h1>Internal Company Directory</h1>
   <div class="customers">
     <!-- Put Your Customers In Here -->
   </div>
