--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Internal Company Directory</h1>
+  <h1>INTERNAL COMPANY DIRECTORY</h1>
   <div class="customers">
     <!-- Put Your Customers In Here -->
   </div>
