Added README.md content, added Meta tags to html'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html>
 <head>
   <title>Customer Database</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.js">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="The Iron Yard Daily Project: Customer Database">
+  <meta name="keywords" content="HTML">
+  <meta name="author" content="Rick Murdock">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.js">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
