--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="The Iron Yard Daily Project: Customer Database">
-  <meta name="keywords" content="HTML">
+  <meta name="keywords" content="HTML,JAVASCRIPT,CSS">
   <meta name="author" content="Rick Murdock">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.js">
   <link rel="stylesheet" href="styles.css">
